Update CHANGES.md, and support more levels in metadata trees.

--- a/lib/Styles/CatalogItemInfo.less
+++ b/lib/Styles/CatalogItemInfo.less
@@ -104,6 +104,22 @@
     padding-left: 60px;
 }
 
+.catalog-item-info-properties-level5 {
+    padding-left: 80px;
+}
+
+.catalog-item-info-properties-level6 {
+    padding-left: 100px;
+}
+
+.catalog-item-info-properties-level7 {
+    padding-left: 120px;
+}
+
+.catalog-item-info-properties-level8 {
+    padding-left: 140px;
+}
+
 .catalog-item-info-properties-parent {
     cursor: pointer;
 }
