big changes to move timeline to AnimationViewController

--- a/lib/Views/Animation.html
+++ b/lib/Views/Animation.html
@@ -18,3 +18,5 @@
         <div class="animation-control-icon">&gt;&gt;</div>
     </div>
 </div>
+<div class="animation-timeline" data-bind="visible: showAnimation">
+</div>
