--- a/lib/Styles/Animation.less
+++ b/lib/Styles/Animation.less
@@ -24,6 +24,7 @@
 }
 
 .animation-text-display {
+    font-weight: 300;
 }
 
 .animation-control {
@@ -58,4 +59,28 @@
     fill: fade(@floating-text-color, 80%);
     padding-bottom: 10px;
     font-size: 18px;
+}
+
+.animation-timeline {
+    .opaque-to-input;
+    position: absolute;
+    bottom: 0;
+    left: @explorer-panel-width + 169px;
+    right: 0px;
+    height: 27px;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+    font-size: 14px;
+    visibility: hidden;
+}
+
+
+@media print {
+    .animation-controls{
+        display: none;
+    }
+    .timelineContainer{
+        display: none;
+    }
 }
