--- a/lib/Styles/Animation.less
+++ b/lib/Styles/Animation.less
@@ -80,7 +80,7 @@
     .animation-controls{
         display: none;
     }
-    .timelineContainer{
+    .animation-timeline{
         display: none;
     }
 }
