--- a/lib/Styles/Map.less
+++ b/lib/Styles/Map.less
@@ -80,6 +80,17 @@ button.cesium-infoBox-camera {
 .leaflet-popup-content {
     margin: 5px 15px;
 }
+.leaflet-control-attribution.leaflet-control {
+  background: none;
+  color: hsl(0, 100%, 100%);
+  text-shadow: 0px 0px 1px hsl(0, 0%, 0%);
+}
+
+.leaflet-control-attribution.leaflet-control a {
+  color: hsl(0, 100%, 100%);
+  text-decoration:none;
+}
+
 
 @media print {
     .map-displaced {
