Force credit line height to 9px.

--- a/lib/Styles/Map.less
+++ b/lib/Styles/Map.less
@@ -11,6 +11,7 @@
     text-shadow: 0px 0px 1px #000000;
     padding: 5px;
     font-family: @default-font;
+    line-height: 9px;
 }
 
 #cesiumContainer .cesium-credit-imageContainer {
@@ -79,6 +80,7 @@ button.cesium-infoBox-camera {
     text-shadow: 0px 0px 1px #000000;
     padding: 5px;
     font-family: @default-font;
+    line-height: 9px;
 }
 
 .leaflet-control-attribution.leaflet-control a {
