--- a/lib/Styles/Animation.less
+++ b/lib/Styles/Animation.less
@@ -4,7 +4,7 @@
     background-color: @floating-background-color;
     left: @explorer-panel-width + 2px;
     bottom: 0px;
-    height: 45px;
+    height: 40px;
     width: 163px;
     border: 1px solid rgba(255,255,255,0.1);
     font-weight: 300;
@@ -16,10 +16,11 @@
     color: @menu-bar-text-color;
     padding-left: 5px;
     padding-right: 5px;
-    padding-top: 5px;
+    padding-bottom: 0px;
     height: 15px;
     cursor: pointer;
     text-align: center;
+    border-bottom: @panel-element-border;
 }
 
 .animation-text-display {
@@ -37,7 +38,6 @@
     padding-right: 10px;
     bottom: 10px;
     cursor: pointer;
-    border-right: @panel-element-border;
 }
 
 .animation-control-active {
