--- a/src/Styles/BrandBar.less
+++ b/src/Styles/BrandBar.less
@@ -4,7 +4,7 @@
     left: 0;
     top: 0;
     width: @brand-bar-width;
-    height: 68px;
+    height: @brand-bar-height;
     background-color: @brand-bar-background-color;
     opacity: 1.0;
     box-shadow: @panel-box-shadow;
@@ -13,7 +13,7 @@
 .brand-bar-main {
     position: absolute;
     width: @brand-bar-width;
-    height: 68px;
+    height: @brand-bar-height;
     top: 0;
     left: 0;
     display: table;
@@ -22,7 +22,7 @@
 
 .brand-bar-element {
     display: table-cell;
-    height: 68px;
+    height: @brand-bar-height;
     vertical-align: middle;
 }
 
