Add @brand-bar-height to main.less

--- a/src/main.less
+++ b/src/main.less
@@ -29,6 +29,7 @@
 // Brand bar
 @brand-bar-background-color: @panel-section-background-color;
 @brand-bar-width: @left-side-panels-width;
+@brand-bar-height: 68px;
 
 // Floating elements
 @floating-background-color: rgba(47,53,60,80%);
