--- a/lib/Styles/ExplorerPanel.less
+++ b/lib/Styles/ExplorerPanel.less
@@ -4,7 +4,7 @@
     position: absolute;
     left: 0;
     width: @explorer-panel-width;
-    top: 68px;
+    top: @brand-bar-height;
     bottom: 0;
 
     -webkit-transition: left @explorer-panel-close-animation-length ease-out;
