--- a/lib/Views/SearchTab.html
+++ b/lib/Views/SearchTab.html
@@ -41,12 +41,12 @@
     <!-- /ko -->
 </script>
 
-<div class="search-tab" tabindex=0 >
+<div class="search-tab" >
     <form class="search-tab-form" data-bind="submit: activateFirstResult">
-        <input class="search-tab-input" type="text" placeholder="Search address, landmark, or data set" data-bind="value: searchText, valueUpdate: 'input', hasFocus: searchBoxHasFocus" />
+        <input class="search-tab-input" type="text" tabindex=-1 placeholder="Search address, landmark, or data set" data-bind="value: searchText, valueUpdate: 'input', hasFocus: searchBoxHasFocus" />
         <div class="search-tab-input-clear" data-bind="visible: searchText.length > 0, click: clearSearchText">&times;</div>
     </form>
-    <div class="search-tab-results-area" data-bind="visible: searchText, foreach: searchProviders">
+    <div class="search-tab-results-area" tabindex=-1 data-bind="visible: searchText, foreach: searchProviders">
         <div class="search-tab-provider">
             <div class="search-tab-provider-header" data-bind="click: toggleOpen">
                 <div class="search-tab-provider-label" data-bind="text: name"></div>
