Use quotes for HTML attributes.

--- a/lib/Views/ExplorerPanel.html
+++ b/lib/Views/ExplorerPanel.html
@@ -1,7 +1,7 @@
 <div class="explorer-panel" data-bind="css: { 'explorer-panel-collapsed': !isOpen }">
-    <div class="explorer-panel-header"> 
+    <div class="explorer-panel-header">
         <div class="explorer-panel-tab-area" data-bind="foreach: tabs">
-          <div class="explorer-panel-tab" tabindex=1
+          <div class="explorer-panel-tab" tabindex="1"
               data-bind="visible: isVisible,
                          css: { 'explorer-panel-tab-active': isActive },
                          click: activate">
