--- a/lib/Views/Animation.html
+++ b/lib/Views/Animation.html
@@ -8,10 +8,10 @@
     <div class="animation-control" data-bind="click: togglePlay" title="Play">
         <div class="animation-control-icon" data-bind="cesiumSvgPath: { path: isPlaying ? $root.svgPause : $root.svgPlay, width: 18, height: 18}"></div>
     </div>
-    <div class="animation-control" data-bind="click: playFaster" title="Play faster">
-        <div class="animation-control-icon animation-control-nofill" data-bind="cesiumSvgPath: { path: svgFaster, width: 16, height: 16}"></div>
+    <div class="animation-control animation-control-nofill" data-bind="event: {click: playFaster, mousedown: down, mouseup: up}" title="Play faster">
+        <div class="animation-control-icon" data-bind="cesiumSvgPath: { path: svgFaster, width: 16, height: 16}, css: { 'animation-control-highlight': highlight }"></div>
     </div>
-     <div class="animation-control animation-control-last" data-bind="click: toggleLoop" title="Loop when end reached">
+    <div class="animation-control animation-control-last" data-bind="click: toggleLoop" title="Loop when end reached">
         <div class="animation-control-icon" data-bind="cesiumSvgPath: { path: svgLoop, width: 16, height: 16}, css: { 'animation-control-active': isLooping }"></div>
     </div>
 </div>
