--- a/lib/Styles/Animation.less
+++ b/lib/Styles/Animation.less
@@ -2,7 +2,7 @@
     .opaque-to-input;
     position: absolute;
     background-color: @floating-background-color;
-    left: @explorer-panel-width + 3px;
+    left: 3px;
     bottom: 0px;
     height: 45px;
     width: 160px;
@@ -70,7 +70,7 @@
     .opaque-to-input;
     position: absolute;
     bottom: 0;
-    left: @explorer-panel-width + 169px;
+    left: 168px;
     right: 0px;
     height: 27px;
     padding: 0;
