--- a/lib/Views/Animation.html
+++ b/lib/Views/Animation.html
@@ -2,7 +2,7 @@
      <div class="animation-text" title="Current Time (tz info et al)">
         <div class="animation-text-display" data-bind="text: currentTimeString"></div>
     </div>
-    <div class="animation-control" data-bind="event: {click: gotoStart, mousedown: function() {gotoStartActive = true;} , mouseup: function() {gotoStartActive = false;}}" title="Play slower">
+    <div class="animation-control" data-bind="event: {click: gotoStart, mousedown: function() {gotoStartActive = true;} , mouseup: function() {gotoStartActive = false;}}" title="Go to beginning">
         <div class="animation-control-icon animation-control-nofill" data-bind="cesiumSvgPath: { path: svgGotoStart, width: 16, height: 16}, css: { 'animation-control-highlight': gotoStartActive }"></div>
     </div>
     <div class="animation-control" data-bind="click: togglePlay" title="Play">
@@ -14,7 +14,7 @@
     <div class="animation-control animation-control-nofill" data-bind="event: {click: playFaster, mousedown: function() {fasterActive = true;} , mouseup: function() {fasterActive = false;}}" title="Play faster">
         <div class="animation-control-icon" data-bind="cesiumSvgPath: { path: svgFaster, width: 16, height: 16}, css: { 'animation-control-highlight': fasterActive }"></div>
     </div>
-    <div class="animation-control animation-control-last" data-bind="click: toggleLoop" title="Loop when end reached">
+    <div class="animation-control animation-control-last" data-bind="click: toggleLoop" title="Loop at the end">
         <div class="animation-control-icon" data-bind="cesiumSvgPath: { path: svgLoop, width: 16, height: 16}, css: { 'animation-control-active': isLooping }"></div>
     </div>
 </div>
