--- a/lib/Styles/Animation.less
+++ b/lib/Styles/Animation.less
@@ -8,6 +8,7 @@
     width: 160px;
     border: 1px solid rgba(255,255,255,0.1);
     font-weight: 300;
+    z-index: 2000;
 }
 
 .animation-text {
@@ -77,6 +78,7 @@
     margin: 0;
     overflow: hidden;
     font-size: 14px;
+    z-index: 2000;
 }
 
 
