--- a/lib/Views/DataCatalogTab.html
+++ b/lib/Views/DataCatalogTab.html
@@ -2,7 +2,7 @@
     <!-- ko if: typeof items === 'undefined' -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
             <div class="data-catalog-member-top-row">
-                <div class="data-catalog-icon-holder clickable" data-bind="click: toggleEnabled">
+                <div class="data-catalog-icon-holder clickable" data-bind="click: $root.clickEnabled">
                     <div class="data-catalog-item-checkbox" data-bind="cesiumSvgPath: { path: isEnabled ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'data-catalog-enabled-item': isEnabled }"></div>
                 </div>
                 <div class="data-catalog-item-label data-catalog-enabled-item clickable" data-bind="visible: isEnabled, text: name, click: zoomToAndUseClock"></div>
@@ -17,10 +17,10 @@
     <!-- ko if: typeof items !== 'undefined' -->
         <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
             <div class="data-catalog-member-top-row">
-                <div class="data-catalog-icon-holder clickable" data-bind="click: toggleOpen">
+                <div class="data-catalog-icon-holder clickable" data-bind="click: $root.clickOpen">
                     <div class="data-catalog-arrow" data-bind="cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }, css: { 'data-catalog-opened-group': isOpen }"></div>
                 </div>
-                <div class="data-catalog-group-label clickable" data-bind="click: toggleOpen, text: name, css: { 'data-catalog-opened-group': isOpen }"></div>
+                <div class="data-catalog-group-label clickable" data-bind="click: $root.clickOpen, text: name, css: { 'data-catalog-opened-group': isOpen }"></div>
             </div>
 
             <!-- ko if: isOpen && (isLoading || items.length === 0) -->
