--- a/lib/Styles/Animation.less
+++ b/lib/Styles/Animation.less
@@ -2,23 +2,23 @@
     .opaque-to-input;
     position: absolute;
     background-color: @floating-background-color;
-    left: 3px;
+    left: 1px;
     bottom: 0px;
     height: 45px;
-    width: 160px;
+    width: 164px;
     border: 1px solid rgba(255,255,255,0.1);
     font-weight: 300;
     z-index: 2000;
 }
 
 .animation-text {
-    font-family: @default-font;
-    font-size: 14px;
+    font-family: 'Roboto Mono', light;
+    font-size: 13px;
     color: @menu-bar-text-color;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 0px;
-    height: 20px;
+    padding-left: 1px;
+    padding-right: 1px;
+    padding-top: 2px;
+    height: 18px;
     cursor: pointer;
     text-align: center;
     border-bottom: @panel-element-border;
@@ -33,8 +33,9 @@
     font-family: @default-font;
     color: @menu-bar-text-color;
     fill: @menu-bar-text-color;
-    padding-left: 1px;
+    padding-left: 3px;
     padding-right: 1px;
+    padding-top: 2px;
     cursor: pointer;
 }
 
