failed attempt to move using style

--- a/lib/Styles/Animation.less
+++ b/lib/Styles/Animation.less
@@ -83,6 +83,12 @@
 }
 
 
+.animation-displace {
+    margin-bottom: 26px;
+    margin-left: 168px;
+}
+
+
 @media print {
     .animation-controls{
         display: none;
