--- a/lib/Styles/Map.less
+++ b/lib/Styles/Map.less
@@ -66,7 +66,7 @@ button.cesium-infoBox-camera {
     margin: 5px 15px;
 }
 
-.leaflet-control-attribution.leaflet-control {
+.leaflet-container  .leaflet-control-attribution {
     background: none;
     color: #ffffff;
     font-size: 9px;
@@ -76,12 +76,12 @@ button.cesium-infoBox-camera {
     line-height: 9px;
 }
 
-.leaflet-control-attribution.leaflet-control a {
+.leaflet-control-attribution a {
     color: #ffffff;
     text-decoration:none;
 }
 
-.leaflet-control-attribution.leaflet-control a:hover {
+.leaflet-control-attribution a:hover {
     color: #ffffff;
     text-decoration:underline;
 }
