--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -57,7 +57,7 @@
                 <!-- ko if: type === 'abs-itt'-->
                 <div class="now-viewing-abs-controls">
                      <div class="now-viewing-tree-icon clickable" data-bind="click: function(data, event) { displayPercent = !displayPercent; }, cesiumSvgPath: { path: displayPercent ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }">TEST</div>
-                    <div class="now-viewing-abs-percent" data-bind="text: 'Display as Percent of Region'"></div>
+                    <div class="now-viewing-abs-percent" data-bind="text: 'Display as percent of region population'"></div>
                 </div>
                 <!-- /ko -->
 
