--- a/lib/Views/DataCatalogTab.html
+++ b/lib/Views/DataCatalogTab.html
@@ -42,7 +42,7 @@
 </script>
 
 <div class="data-catalog-top-group" data-bind="foreach: catalog.group.items">
-    <div class="data-catalog-top-group-header" data-bind="click: toggleOpen">
+    <div class="data-catalog-top-group-header" data-bind="click: $root.clickOpen">
         <div class="data-catalog-top-group-label" data-bind="text: name"></div>
         <div class="data-catalog-icon-holder">
             <div class="data-catalog-top-group-icon" data-bind="cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }"></div>
