Add option to count catalog items on the Tools panel.

--- a/lib/Views/ToolsPanel.html
+++ b/lib/Views/ToolsPanel.html
@@ -71,6 +71,13 @@
                     <input class="tools-url-add-button" type="submit" value="Export to CKAN" />
                 </div>
             </form>
+
+            <form class="tools-form" data-bind="submit: countDatasets">
+                <h2>Count Data Sets</h2>
+                <label class="tools-content-type">
+                    <input class="tools-content-type-select" type="submit" value="Count" />
+                </label>
+            </form>
         </div>
     </div>
 </div>
