Added Open Street Map imagery
Add ability to add Open Street Map Imagery from Add Data Panel

--- a/lib/Views/AddDataPanel.html
+++ b/lib/Views/AddDataPanel.html
@@ -25,6 +25,7 @@
                         <option value="csv">CSV</option>
                         <option value="czml">CZML</option>
                         <option value="gpx">GPX</option>
+                        <option value="openstreet">Open Street Map</option>
                         <option value="other">Other (use conversion service)</option>
                     </select>
                 </label>
