--- a/lib/Views/AddDataPanel.html
+++ b/lib/Views/AddDataPanel.html
@@ -20,12 +20,12 @@
                         <option value="wms-getCapabilities">Web Map Service (WMS) Server</option>
                         <option value="wfs-getCapabilities">Web Feature Service (WFS) Server</option>
                         <option value="esri-group">Esri ArcGIS Server</option>
+                        <option value="open-street-map">Open Street Map Server</option>
                         <option value="geojson">GeoJSON</option>
                         <option value="kml">KML or KMZ</option>
                         <option value="csv">CSV</option>
                         <option value="czml">CZML</option>
                         <option value="gpx">GPX</option>
-                        <option value="openstreet">Open Street Map</option>
                         <option value="other">Other (use conversion service)</option>
                     </select>
                 </label>
