First cut of WMTS support.

--- a/lib/Views/AddDataPanel.html
+++ b/lib/Views/AddDataPanel.html
@@ -18,6 +18,7 @@
                     <select class="add-data-content-type-select" data-bind="value: dataType">
                         <option value="auto">Auto-detect (recommended)</option>
                         <option value="wms-getCapabilities">Web Map Service (WMS) Server</option>
+                        <option value="wmts-getCapabilities">Web Map Tile Service (WMTS) Server</option>
                         <option value="wfs-getCapabilities">Web Feature Service (WFS) Server</option>
                         <option value="esri-group">Esri ArcGIS Server</option>
                         <option value="open-street-map">Open Street Map Server</option>
