Improvements in the course of building a Queensland blacklist.

--- a/lib/Views/ToolsPanel.html
+++ b/lib/Views/ToolsPanel.html
@@ -78,6 +78,13 @@
                     <input class="tools-content-type-select" type="submit" value="Count" />
                 </label>
             </form>
+
+            <form class="tools-form" data-bind="submit: openAllInOpenGroups">
+                <h2>Open all items in open groups</h2>
+                <label class="tools-content-type">
+                    <input class="tools-content-type-select" type="submit" value="Open All" />
+                </label>
+            </form>
         </div>
     </div>
 </div>
