--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -11,7 +11,7 @@
             <div class="share-popup-right">
                 <div class="share-popup-label" data-bind="visible: itemsSkippedBecauseTheyHaveLocalData.length > 0">
                     The following data sources will NOT be shared because they include data from this local system.
-                    To share these data sources, publish their data on a web server and add them to National Map using
+                    To share these data sources, publish their data on a web server and add them using
                     the URL instead of by dragging/dropping or selecting a local file.
                     <ul data-bind="foreach: itemsSkippedBecauseTheyHaveLocalData">
                         <li data-bind="text: name"></li>
