Moving toward better ABS/CSV styling.

--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -1,25 +1,23 @@
 <script type="text/html" id="now-viewing-tree-item-template">
-    <tr>
-        <td class="now-viewing-tree-properties-name-cell" data-bind="css: 'now-viewing-tree-properties-level' + ($parents.length-1) + (hasChildren ? ' now-viewing-tree-properties-parent' : '')">
-            <!-- ko if: hasChildren && isOpen -->
-            <div class="now-viewing-tree-properties-arrow" data-bind="click: toggleOpen, cesiumSvgPath: { path: $root.svgArrowDown, width: 32, height: 32 }"></div>
-            <!-- /ko -->
-            <!-- ko if: hasChildren && !isOpen -->
-            <div class="now-viewing-tree-properties-arrow" data-bind="click: toggleOpen, cesiumSvgPath: { path: $root.svgArrowRight, width: 32, height: 32 }"></div>
-            <!-- /ko -->
-            <!-- ko if: !hasChildren -->
-            <div class="now-viewing-tree-properties-arrow"></div>
+    <div class="data-catalog-member" data-bind="css: 'data-catalog-indent' + ($parents.length - 2)">
+        <div class="data-catalog-member-top-row">
+            <!-- ko if: hasChildren -->
+                <div class="data-catalog-icon-holder clickable" data-bind="click: toggleOpen">
+                    <div class="data-catalog-arrow" data-bind="cesiumSvgPath: { path: isOpen ? $root.svgArrowDown : $root.svgArrowRight, width: 32, height: 32 }, css: { 'data-catalog-opened-group': isOpen }"></div>
+                </div>
             <!-- /ko -->
             <!-- ko if: isSelectable -->
-             <div class="now-viewing-tree-icon clickable" data-bind="click: toggleActive, cesiumSvgPath: { path: isActive ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }"></div>
+                <div class="data-catalog-icon-holder clickable" data-bind="click: toggleActive">
+                    <div class="data-catalog-item-checkbox" data-bind="cesiumSvgPath: { path: isActive ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'data-catalog-enabled-item': isActive }"></div>
+                </div>
             <!-- /ko -->
-            <div class="now-viewing-tree-properties-name" data-bind="text: name"></div>
-        </td>
-    </tr>
-    <!-- ko if: hasChildren && isOpen -->
-        <!-- ko template: { name: 'now-viewing-tree-item-template', foreach: items } -->
+            <div class="data-catalog-item-label" data-bind="text: name, css: { 'data-catalog-enabled-item': isSelectable && isActive }"></div>
+        </div>
+
+        <!-- ko if: isOpen -->
+            <div class="data-catalog-group-contents" data-bind="template: { name: 'now-viewing-tree-item-template', foreach: items }"></div>
         <!-- /ko -->
-    <!-- /ko -->
+    </div>
 </script>
 
 <div class="now-viewing">
@@ -66,9 +64,7 @@
                     <img class="now-viewing-legend-image" data-bind="attr: { src: legendUrl }" />
                 </a>
                 <!-- /ko -->
-                <!-- ko if: hasLegend && !legendIsImage -->
-                <a class="now-viewing-legend-text" data-bind="attr: { href: legendUrl }" target="_blank">Open legend in a separate tab</a>
-                <!-- /ko -->
+
                 <!-- ko if: !hasLegend -->
                     <!-- ko if: type !== 'abs-itt' -->
                     <div class="now-viewing-legend-text">No legend available for this data item.</div>
@@ -77,15 +73,12 @@
                     <div class="now-viewing-legend-text">Select at least one code in each data area.</div>
                     <!-- /ko -->
                 <!-- /ko -->
-                
+
                 <!-- ko if: type === 'abs-itt' -->
                 <div class="now-viewing-abs-section">
-                    <div class="now-viewing-tree-table">
-                        <!-- ko if: absDataset && absDataset.items -->
-                        <table data-bind="template: { name: 'now-viewing-tree-item-template', foreach: absDataset.items }">
-                        </table>
-                        <!-- /ko -->
-                    </div>
+                    <!-- ko if: absDataset && absDataset.items && absDataset.items.length > 0 -->
+                    <div class="now-viewing-section-contents" data-bind="template: { name: 'now-viewing-tree-item-template', foreach: absDataset.items }"></div>
+                    <!-- /ko -->
                 </div>
                 <!-- /ko -->
 
