--- a/lib/Styles/NowViewingTab.less
+++ b/lib/Styles/NowViewingTab.less
@@ -163,6 +163,10 @@
     border: 1px dashed gray;
 }
 
+.now-viewing-section-contents {
+    padding-left: 16px;
+    padding-right: 5px;
+}
 
 .now-viewing-abs-controls {
     padding-left: 15px;
