--- a/lib/Styles/Navigation.less
+++ b/lib/Styles/Navigation.less
@@ -53,6 +53,10 @@
     padding-bottom: 6px;
 }
 
+.navigation-control-icon-active {
+    fill: @highlight-color;
+    color: @highlight-color;
+}
 
 @compass-diameter: 95px;
 @compass-ring-width: @compass-diameter * 20 / 145;
