--- a/lib/Styles/PopupMessage.less
+++ b/lib/Styles/PopupMessage.less
@@ -9,9 +9,12 @@
 }
 
 .popup-message-content {
-    position: relative;
+    position: absolute;
+    top: 40px;
+    bottom: 0;
+    left: 0;
+    right: 0;
     overflow: auto;
-    height: 215px;
     padding: 15px;
 }
 
