--- a/lib/Views/PopupMessage.html
+++ b/lib/Views/PopupMessage.html
@@ -1,10 +1,10 @@
 <div class="modal-background" data-bind="click: closeIfClickOnBackground">
-    <div class="popup-message">
+    <div class="popup-message" data-bind="style: { width: width + 'px', height: height + 'px', 'max-width': maxWidth + 'px', 'max-height': maxHeight + 'px' }">
         <div class="modal-header">
             <div class="modal-close-button" data-bind="click: close">&times;</div>
             <h1 data-bind="text: title"></h1>
         </div>
-        <div class="popup-message-content"  id="popup-window-content" >
+        <div class="popup-message-content"  id="popup-window-content">
             <div class="popup-message-label" data-bind="markdown: message"></div>
         </div>
     </div>
