--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -16,7 +16,7 @@
                     <div class="data-catalog-item-checkbox" data-bind="cesiumSvgPath: { path: isActive ? $root.svgCheckboxChecked : $root.svgCheckboxUnchecked, width: 32, height: 32 }, css: { 'data-catalog-enabled-item': isActive }"></div>
                 </div>
             <!-- /ko -->
-            <div class="data-catalog-item-label" data-bind="text: name, css: { 'data-catalog-enabled-item': isSelectable && isActive }"></div>
+            <div class="data-catalog-item-label now-viewing-abs-tighter" data-bind="text: name, css: { 'data-catalog-enabled-item': isSelectable && isActive }"></div>
         </div>
 
         <!-- ko if: hasChildren && isOpen -->
