Explorer panel style tweaks.

--- a/lib/Styles/DataCatalogTab.less
+++ b/lib/Styles/DataCatalogTab.less
@@ -2,7 +2,7 @@
     display: table;
     width: 100%;
     line-height: 40px;
-    background-color: rgba(0,0,0, 0.2);
+    background-color: @panel-section-background-color;
     border-bottom: @panel-element-border;
     cursor: pointer;
     table-layout: fixed;
