--- a/lib/Styles/ExplorerPanel.less
+++ b/lib/Styles/ExplorerPanel.less
@@ -40,6 +40,7 @@
     height: 40px;
     margin: 0;
     padding: 0;
+    border-top: @panel-element-border;
     border-bottom: @panel-element-border;
     background-color: @explorer-panel-header-background-color;
     box-shadow: @panel-box-shadow;
@@ -68,6 +69,8 @@
     -webkit-transition: color 0.15s ease;
     -moz-transition: color 0.15s ease;
     -o-transition: color 0.15s ease;
+    border-right: @panel-element-border;
+    border-bottom: @panel-element-border;
 }
 
 .explorer-panel-tab:hover {
@@ -122,7 +125,7 @@
     background-color: @panel-background-color;
     left: 0;
     width: @explorer-panel-width;
-    top: 40px;
+    top: 41px;
     bottom: 0;
     overflow: auto;
     box-shadow: @panel-box-shadow;
