--- a/lib/Views/NowViewingAttentionGrabber.html
+++ b/lib/Views/NowViewingAttentionGrabber.html
@@ -1,9 +1,11 @@
-<div class="now-viewing-attention-grabber-callout" data-bind="visible: isVisible"></div>
-<div class="now-viewing-attention-grabber" data-bind="visible: isVisible">
-    <div class="now-viewing-attention-grabber-message">
-        Look here for the <strong>legend</strong> and for dataset options.
-    </div>
-    <div class="now-viewing-attention-grabber-dismiss-button" data-bind="click: close">
-        GOT IT, THANKS!
+<div class="now-viewing-attention-grabber-container" data-bind="css: { 'now-viewing-attention-grabber-container-visible': isVisible }">
+    <div class="now-viewing-attention-grabber-callout"></div>
+    <div class="now-viewing-attention-grabber">
+        <div class="now-viewing-attention-grabber-message">
+            Look here for the <strong>legend</strong> and for dataset options.
+        </div>
+        <div class="now-viewing-attention-grabber-dismiss-button" data-bind="click: close">
+            GOT IT, THANKS!
+        </div>
     </div>
 </div>
