--- a/lib/Styles/ExplorerPanel.less
+++ b/lib/Styles/ExplorerPanel.less
@@ -61,17 +61,38 @@
     font-size: 15px;
     font-weight: normal;
     color: @explorer-panel-inactive-tab-text-color;
+    fill: @explorer-panel-inactive-tab-text-color;
     display: table-cell;
     cursor: pointer;
     padding-left: 8px;
     padding-right: 8px;
-    -webkit-transition: color 0.15s ease;
-    -moz-transition: color 0.15s ease;
-    -o-transition: color 0.15s ease;
+    -webkit-transition: color 0.15s ease, fill 0.15s ease;
+    -moz-transition: color 0.15s ease, fill 0.15s ease;
+    -o-transition: color 0.15s ease, fill 0.15s ease;
+}
+
+.explorer-panel-tab-icon-holder {
+    display: inline-block;
+    position: relative;
+    height: 40px;
+}
+
+.explorer-panel-tab-icon {
+    display: inline-block;
+    position: relative;
+    width: 17px;
+    height: 17px;
+    vertical-align: middle;
+    top: -2px;
+}
+
+.explorer-panel-tab-label {
+    display: inline-block;
 }
 
 .explorer-panel-tab:hover {
   color: @explorer-panel-active-tab-text-color;
+  fill: @explorer-panel-active-tab-text-color;
 }
 
 .explorer-panel-tab-content {
@@ -114,6 +135,7 @@
 .explorer-panel-tab-active {
     border-bottom: 1px solid @explorer-panel-active-tab-underline-color;
     color: @explorer-panel-active-tab-text-color;
+    fill: @explorer-panel-active-tab-text-color;
 }
 
 .explorer-panel-body {
