Tweak popup message paragraph styling.

--- a/lib/Styles/PopupMessage.less
+++ b/lib/Styles/PopupMessage.less
@@ -24,6 +24,11 @@
     padding-bottom: 5px;
 }
 
+.popup-message-content p {
+    margin-top: 1em;
+    margin-top: 1em;
+}
+
 .popup-message-close-button {
     position: absolute;
     right: 10px;
