Add support for per-dataset Now Viewing attention grabbing.

--- a/lib/Styles/NowViewingAttentionGrabber.less
+++ b/lib/Styles/NowViewingAttentionGrabber.less
@@ -27,6 +27,10 @@
     font-weight: bold;
 }
 
+.now-viewing-attention-grabber-message em {
+    font-weight: bold;
+}
+
 .now-viewing-attention-grabber-dismiss-button {
     .clickable;
     color: @highlight-color;
