--- a/lib/Styles/ExplorerPanel.less
+++ b/lib/Styles/ExplorerPanel.less
@@ -49,7 +49,7 @@
     position:absolute;
     left: 8px;
     top: 0;
-    right: 50px;
+    width: 310px;
     height: 40px;
     margin: 0;
     padding: 0;
@@ -235,7 +235,7 @@
 
 .explorer-panel-collapse-button {
     position: absolute;
-    left: @explorer-panel-width - 44px;
+    left: @explorer-panel-width - 40px;
     top: 0;
     width: 40px;
     height: 40px;
