--- a/lib/Views/ToolsPanel.html
+++ b/lib/Views/ToolsPanel.html
@@ -73,6 +73,14 @@
             </form>
             <form class="tools-form" data-bind="submit: cacheAbsData">
                 <h2>Cache selected ABS datasets</h2>
+                <label class="tools-content-type">
+                    Select the ABS data layers to cache:
+                    <select class="tools-content-type-select" data-bind="value: absFilter">
+                        <option value="opened">All Opened</option>
+                        <option value="enabled">All Enabled</option>
+                        <option value="all">All</option>
+                    </select>
+                </label>
                 <div class="tools-url-input-outer-holder">
                     <input class="tools-url-add-button" type="submit" value="Cache Datasets" />
                 </div>
