--- a/lib/Views/SharePopup.html
+++ b/lib/Views/SharePopup.html
@@ -27,7 +27,7 @@
                 </div>
                 <div>
                     <label class="share-popup-checkbox">
-                        <input type="checkbox" data-bind="checked: shortenUrl" />Shorten Url
+                        <input type="checkbox" data-bind="checked: shortenUrl" />Shorten share url using goo.gl
                     </label>
                 </div>
             </div>
