--- a/lib/Views/Navigation.html
+++ b/lib/Views/Navigation.html
@@ -10,11 +10,11 @@ TIP: You can also free orbit by holding the CTRL key and dragging the map." data
 </div>
 <div class="navigation-controls">
     <!-- ko foreach: controls -->
-    <div data-bind="click: didClick, attr: { title: $data.name }, css: $root.isLastControl($data) ? 'navigation-control-last' : 'navigation-control' ">
-        <!-- ko if: $data.hasText() -->
+    <div data-bind="click: activate, attr: { title: $data.name }, css: $root.isLastControl($data) ? 'navigation-control-last' : 'navigation-control' ">
+        <!-- ko if: $data.hasText -->
         <div data-bind="text: $data.text, css: $data.isActive ?  'navigation-control-icon-active ' + $data.cssClass : $data.cssClass"></div>
         <!-- /ko -->
-        <!-- ko ifnot: $data.hasText() -->
+        <!-- ko ifnot: $data.hasText -->
         <div data-bind="cesiumSvgPath: { path: $data.svgIcon, width: $data.svgWidth, height: $data.svgHeight }, css: $data.isActive ?  'navigation-control-icon-active ' + $data.cssClass : $data.cssClass"></div>
         <!-- /ko -->
     </div>
