style tweak to not wrap

--- a/lib/Styles/Animation.less
+++ b/lib/Styles/Animation.less
@@ -15,13 +15,14 @@
     font-family: 'Roboto Mono', light;
     font-size: 13px;
     color: @menu-bar-text-color;
-    padding-left: 1px;
+    padding-left: 3px;
     padding-right: 1px;
     padding-top: 1px;
     height: 18px;
     cursor: pointer;
-    text-align: center;
+    text-align: left;
     border-bottom: @panel-element-border;
+    white-space: nowrap;
 }
 
 .animation-text-display {
