purge in tools panel

--- a/lib/Views/ToolsPanel.html
+++ b/lib/Views/ToolsPanel.html
@@ -34,6 +34,12 @@
                         <input type="checkbox" data-bind="checked: useProxyCache" />
                         Use proxy cache
                     </label>
+                    <!-- ko if: useProxyCache -->
+                    <label class="tools-content-type">
+                        <input type="checkbox" data-bind="checked: purgeProxyCache" />
+                        Purge proxy cache
+                    </label>
+                    <!-- /ko -->
                 </div>
 
             </form>
