Display control in now viewing

--- a/lib/Views/NowViewingTab.html
+++ b/lib/Views/NowViewingTab.html
@@ -48,6 +48,9 @@
             <div class="now-viewing-item-details" data-bind="visible: isLegendVisible">
                 <div class="now-viewing-action-menu">
                     <div class="now-viewing-action clickable" data-bind="click: zoomToAndUseClock" title="Change the map view to show the full extent of this data item.">Zoom To</div>
+                    <!-- ko foreach: rightSideControls -->
+                    <div class="now-viewing-action clickable" data-bind="click: activate, text: $data.text, attr: { title: $data.name }"></div>
+                    <!-- /ko -->
                     <!-- ko if: showInfo -->
                     <div class="now-viewing-action clickable" data-bind="click: $root.showInfo.bind($root)" title="Display information about this data item.">Info</div>
                     <!-- /ko -->
